# my-todos-api

./: .env.example  .gitignore  Cargo.toml  README.md
api/: gemini.rs  handler.rs  openai.rs
src/: error.rs  lib.rs
src/clients/: openai.rs
src/http/: cors.rs  mod.rs  response.rs
src/models/: prompt.rs
src/services/: gemini_chat.rs  mod.rs  openai_chat.rs
