[package]
name = "my-vercel-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros"] }
serde_json = { version = "1", features = ["raw_value"] }
# Documentation: https://docs.rs/vercel_runtime/latest/vercel_runtime
vercel_runtime = { version = "1" }
anyhow = "1.0.99"
serde = { version = "1", features = ["derive"] }
url = "2"
openai = "1"
http = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
gemini-rs = "2.0.0"
thiserror = "1"

# You can specify a library for shared logic here (optional)
# [lib]
# path = "src-rs/lib.rs"

# Each handler has to be specified as [[bin]]
[[bin]]
name = "handler"
path = "api/handler.rs"

# Note that you need to provide unique names for each binary:
# [[bin]]
# name = "user-id"
# path = "api/user/[id].rs"
#
# [[bin]]
# name = "group-id"
# path = "api/group/[id].rs"

[[bin]]
name = "openai"
path = "api/openai.rs"

[[bin]]
name = "gemini"
path = "api/gemini.rs"
